# ffmpeg4-ffi-rust

./: .gitignore  Cargo.toml  README.md  build.rs  codegen.sh  headers.h  headers_missing.h
src/: lib.rs  sys.rs
