[package]
name = "ffmpeg4-ffi"
version = "0.3.8"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
keywords = ["video", "ffmpeg"]
#description = "Self contained (no net/sys deps) static rust bindings to ffmpeg."
license = "MIT"
#homepage = "https://github.com/imager-io/ffmpeg-dev-rs"
#repository = "https://github.com/imager-io/ffmpeg-dev-rs"
readme = "README.md"
exclude = []

[dependencies]
libc = "^0.2"

[build-dependencies]
bindgen = "0.51"
cc = "1.0.46"
