# upstream version : 0.3.8
# ffmpeg version   : 4.2.2

[package]
name = "ffmpeg4-ffi"
version = "0.3.8"
authors = ["AbsurdlySuspicious <repom2@airmail.cc>", "colbyn <hello@colbyn.com>"]
edition = "2018"
keywords = ["video", "ffmpeg"]
description = "Dynamic-linked rust bindings to ffmpeg."
license = "MIT"
homepage = "https://github.com/AbsurdlySuspicious/ffmpeg4-ffi-rust"
repository = "https://github.com/AbsurdlySuspicious/ffmpeg4-ffi-rust"
readme = "README.md"
exclude = []

[dependencies]
libc = "^0.2"

[build-dependencies]
bindgen = "0.56"
cc = "1.0.46"
